# CMake_FindPackage

./: CMakeLists.txt
cmake/: FindPOTATO.cmake
